feat:added the files including the stash files

--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@
   <h1>Frontend Changes</h1>
   <h1>this is important line</h1>
   some changes need to adapt
+  <h1>hello this is not  important</h1>
 </body>
